--- a/Books/index.html
+++ b/Books/index.html
@@ -13,10 +13,10 @@
   <link rel="icon" type="image/x-icon" href="assets/img/book_icon.ico">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body data-theme="dark">
-
+<body data-theme="light">
+  <!-- Header -->
   <header class="header">
-    <a href="#" class="logo"><i class="fas fa-quote-left"></i> Book Quote</a>
+    <a href="#" class="logo"><i class="fas fa-quote-left"></i>  Book Quote</a>
     <div class="header-actions">
       <button class="header-btn notification-badge"><i class="far fa-bell"></i></button>
       <button class="header-btn" id="themeToggle"><i class="fas fa-moon"></i></button>
@@ -24,6 +24,17 @@
     </div>
   </header>
 
+  <!-- Desktop Navigation Arrows -->
+  <div class="desktop-nav-arrows">
+    <div class="nav-arrow" id="upArrow">
+      <i class="fas fa-chevron-up"></i>
+    </div>
+    <div class="nav-arrow" id="downArrow">
+      <i class="fas fa-chevron-down"></i>
+    </div>
+  </div>
+
+  <!-- Main Slider -->
   <div class="main-container">
     <div class="slider-container">
       <button class="autoplay-btn" id="autoplayBtn"><i class="fas fa-play"></i></button>
@@ -33,10 +44,16 @@
         <button class="action-btn like-btn" id="likeBtn"><i class="far fa-heart"></i></button>
         <button class="action-btn" id="shareBtn" data-bs-toggle="modal" data-bs-target="#shareModal"><i class="fas fa-share"></i></button>
       </div>
-      <div class="nav-hint"><i class="fas fa-chevron-up"></i>Swipe up for next</div>
+      
+      <!-- Mobile Navigation Hint -->
+      <div class="nav-hint-mobile">
+        <i class="fas fa-chevron-up"></i>
+        Swipe up for next
+      </div>
     </div>
   </div>
 
+  <!-- Share Modal -->
   <div class="modal fade" id="shareModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -50,7 +67,7 @@
             <div class="form-control share-link" id="shareLink"></div>
           </div>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer ">
           <button type="button" class="btn btn-accent" id="copyBtn"><i class="fas fa-copy me-1"></i>Copy Link</button>
           <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
         </div>
